-Draw engine: now it allows transparency
-Menu windows can be placed and resized to the whole program window
-Some windows geometry (position, size) are saved in the configuration
-Hotkeys now show right capitalization (lowercase or uppercase)
-Edit box now has a key to delete all input (cursor down)
-GUI color bars depend on current style

Changed "Jeff Braine" manufacturer to "New Horizons". Changed Prism machine name to "Prism 512"
Fixed bug when writing divmmv memory on Chloe machine and underlying RAM in space 0000-3fffh become overwritten
Added colors to ncurses driver and Chloe machine
Changes in TSConf: Added "reveal" setting to view which pixels are used by a layer
Improved Visualmem: now you can see all 3 different access (write, read, opcode) at once, generating a RGB color
Added DAAD, PAWS and Quill debugger, for Spectrum and CPC (CPC only supports Daad)
Added hdf to ide/mmc raw converter
Added hdf support to MMC emulation
Allow text adventure keyboard also on CPC
Added support for more cyrillic characters on menu
Added Derby+ and Derby++ roms
Added Chloe MMU to ZX-Uno
Added AY Sheet: showing a sheet with the notes being played
Added RetroMac Gui Style
Added feature to export AY chip music to midi (.mid) file

Improved breakpoint parser: 
-full expression parser: parenthesis, functions, sums, multiplications, etc. Can be used as a full calculator!
-now it's a lot more faster. Up to 7 times faster, so it uses 7 times less cpu than the old version

Improved watches:
-using new expression parser
-up to 10 watches on screen
-watches are saved on configuration file

Improved adventure text extractor: now supports Daad games too. So it supports Daad, Paws, Quill and Gac
Improved footer:
-Footer now completely follows GUI Style
-Reordered cpu use, numbers in red when cpu use > 85%
-Now shows cpu temperature on Linux (and not only on Raspbian as before)

Improved Waveform window: now the wave adjusts automatically to the zxwindow size
